better lua docs and api
